<resources>
    <string name="app_name">HR</string>
    <string name="title_activity_main_page">Main Page</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">user_name</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="activity_login">Login</string>
    <string name="user_name"> User Name </string>
    <string name="password"> Password </string>
    <string name="org_code">&#160;Organisation Code   </string>
    <string name="login">Login</string>
    <string name="forget_pass">forget password</string>
    <string name="create_acc"> Do not have an account</string>
    <string name="info"> My information </string>
    <string name="payroll">  payroll </string>
    <string name="attendance"> Attendance </string>
    <string name="requests"> Requests </string>
    <string name="messages"> Messages </string>
    <string name="Complaints_Suggestions"> Complaints and Suggestions </string>
    <string name="tasks"> Tasks </string>
    <string name="notifications"> Notifications </string>
    <string name="email"> Email </string>
    <string name="phone"> Phone </string>
    <string name="emp_code"> Employee Code </string>
    <string name="fingerprint"> Fingerprint </string>
    <string name="send_request"> Send Request </string>
    <string name="personal_data"> Personal Data </string>
    <string name="job_data"> Job Data </string>
    <string name="government_data"> Government Data </string>
    <string name="Financial_data"> Financial Data </string>
    <string name="documents"> Documents </string>
    <string name="archive"> Archive </string>
    <string name="family"> Family </string>
    <string name="qualification"> Qualification </string>
    <string name="experience"> Experience </string>
    <string name="edit_login">Edit Login Data </string>
    <string name="rejected_request"> Rejected Requests</string>
    <string name="accept_request"> Accept Requests</string>
    <string name="pending_request"> Pending Requests</string>
    <string name="loan_request"> Loan Requests</string>
    <string name="custody_request"> Custody Requests</string>
    <string name="vacation_request"> Vacation Requests</string>
    <string name="another_request"> Other Requests</string>
    <string name="permission_request"> Permission Requests</string>
    <string name="change_department_request"> change department Requests</string>
    <string name="to"> to</string>
    <string name="from"> from</string>
    <string name="period"> period</string>
    <string name="statues"> statues</string>
    <string name="payrollTx"> payroll</string>
    <string name="total"> total</string>
    <string name="استقطعات"> استقطعات</string>
    <string name="attendance_daily"> Attendance Daily</string>
    <string name="attendance_monthly"> Attendance Monthly</string>
    <string name="payroll_current_month"> Payroll Current Month</string>
    <string name="payroll_prev_month"> Payroll Previous  Months</string>
    <string name="permission_type"> Permission Type</string>
    <string name="permission_Date"> Permission Date</string>
    <string name="vacation_slice"> Vacation Slice</string>
    <string name="vacation_day"> Vacation Day Numbers</string>
    <string name="start_date"> Start Date</string>
    <string name="end_date"> Expired Date</string>
    <string name="description"> Description</string>
    <string name="loan_type"> Loan Type</string>
    <string name="loan_amount"> Loan Amount</string>
    <string name="note"> Note</string>
    <string name="title"> Title</string>
    <string name="custody_type"> Custody Type</string>
    <string name="amount"> Amount</string>
    <string name="id_data"> ID Data</string>
    <string name="id_num"> ID number</string>
    <string name="copy_num"> Copy Number </string>
    <string name="release_date"> Release Date </string>
    <string name="request_type"> Request Type </string>
    <string name="medical_insurance"> Medical Insurance </string>
    <string name="insurance_company">  Insurance  Company</string>
    <string name="insurance_category">  Insurance  Category</string>
    <string name="insurance_policy">  Insurance  Policy</string>
    <string name="due_date"> Due Date</string>
    <string name="passport_data"> Passport Data</string>
    <string name="passport_num"> Passport Number</string>
    <string name="release_place"> Release place</string>
    <string name="social_insurance"> Social Insurance </string>
    <string name="work_office_num"> Work Office Number</string>
    <string name="insurance_num"> Insurance  Number</string>
    <string name="basic_salary"> Basic Salary</string>
    <string name="permanent_dues"> Permanent Dues</string>
    <string name="variable_dues"> Variable Dues</string>
    <string name="variable_deduction"> Variable Deduction</string>
    <string name="insurance_deduction"> Variable Deduction</string>
    <string name="total_salary"> Total Salary</string>
    <string name="gender"> Gender</string>
    <string name="religion">Religion</string>
    <string name="socialState">Social State</string>
    <string name="Ar"> Arabic Language</string>
    <string name="En"> English Language</string>
    <string name="birth_day"> Birth Day Data</string>
    <string name="city"> City</string>
    <string name="country"> Country</string>
    <string name="birthDate_H"> H BirthDate</string>
    <string name="birthDate_G"> G BirthDate</string>
    <string name="nationality">Nationality</string>
    <string name="management_place">Management Place</string>
    <string name="job_degree">Job Degree</string>
    <string name="sponsor">Sponsor</string>
    <string name="emp_group">Employee Group</string>
    <string name="bank">Bank</string>
    <string name="bank_account">Bank Account</string>
    <string name="job_hour">Job Hour</string>
    <string name="contract_type">Contract Type</string>
    <string name="emp_state">Employee State</string>
    <string name="job_date">Job Date</string>
    <string name="job_start_date">Date of Start Job</string>
    <string name="job_end_date">Date of End Job</string>
    <string name="direct_job"> LastDate of direct Job</string>
    <string name="enter"> Enter &#160;</string>
    <string name="know_emp_code"> Know Employee Code ? </string>
    <string name="know_emp_id"> Know Employee Id ? </string>
    <string name="dont_know"> None of Above </string>
    <string name="fill_data"> please fill at least one field </string>
    <string name="years"> Years </string>
    <string name="active"> Active </string>
    <string name="expired"> Expired </string>
    <string name="exp_years"> Experience years </string>
    <string name="exp_job_title"> Job Position </string>
    <string name="exp_job_details"> Job Details </string>
    <string name="edit"> Edit </string>
    <string name="delete"> Delete </string>
    <string name="save"> Save </string>
    <string name="add_experience"> Add Experience </string>
    <string name="major"> Major </string>
    <string name="date"> Date </string>
    <string name="checkIn"> Check In </string>
    <string name="checkOut"> Check Out </string>
    <string name="present"> Present </string>
    <string name="absence"> Absence </string>
    <string name="work_hour"> Work Hour </string>
    <string name="work_hour_req"> Required Work Hour </string>
    <string name="late_hour"> Late Hour</string>
    <string name="overtime"> OverTime</string>
    <string name="earlyTime">  Checkout Early </string>
    <string name="permission"> Permission</string>
    <string name="logout"> LogOut </string>
    <string name="fName"> First Name </string>
    <string name="mName"> Middle Name </string>
    <string name="lName"> Last Name </string>
    <string name="fName2"> الاسم الاول </string>
    <string name="mName2"> الاسم الثانى</string>
    <string name="lName2"> اللقب </string>
    <string name="fLanguage">English Name</string>
    <string name="sLanguage">Arabic  Name</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="cancel">Cancel</string>
    <string name="expired_doc">Expired Documents</string>
    <string name="upon_expire">Upon Expire</string>
    <string name="employees">Employees</string>
    <string name="myAccount">My Account</string>
    <string name="Admin">Admin</string>
    <string name="end_v_date">End Date</string>
    <string name="emp_info">Employee Information</string>
    <string name="req_done">  Sent Successfully </string>
    <string name="done">  Done Successfully </string>
    <string name="rejected"> Rejected </string>
    <string name="accept"> Accept </string>
    <string name="pending"> Pending </string>
    <string name="days"> Days Number </string>
    <string name="show">Show</string>
    <string name="details">Details</string>
    <string name="rejected_note">Rejected Note</string>
    <string name="choose_account">Choose Account</string>
    <string name="search">Search</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_ad_main_page">adMainPage</string>
    <string name="Receivables">Receivables</string>
    <string name="Deduction">Deduction</string>
    <string name="time">Time</string>
    <string name="repeat">repeat reminder</string>
    <string name="hidden">Set As Hidden </string>
    <string name="time_reminder">Time Reminder </string>
    <string name="date_reminder">Date Reminder </string>
    <string name="no_date"> Not Found </string>
    <string name="group_name"> Group Name </string>
    <string name="group_description"> Group Description</string>
    <string name="chat"> chat </string>
    <string name="group"> group </string>
    <string name="group_details"> Group Details </string>
    <string name="members">Members </string>
    <string name="add_member">Add Member </string>
    <string name="leave_group"> Leave Group </string>
    <string name="member_already_exist"> Member Already Exist </string>
    <string name="member_leave"> Member leave group you want back him ? </string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
</resources>