<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/notification"
            android:icon="@drawable/notification"
            android:title="@string/notifications" />
        <item
            android:id="@+id/allEmployee"
            android:icon="@drawable/group"
            android:title="@string/employees" />
        <item
            android:id="@+id/location"
            android:visible="false"
            android:icon="@drawable/group"
            android:title="@string/employees" />
        <item
            android:id="@+id/attendance"
            android:icon="@drawable/attend"
            android:title="@string/attendance" />
        <item
            android:id="@+id/tasks"
            android:icon="@drawable/tasks"
            android:title="@string/tasks" />
        <item
            android:id="@+id/payroll"
            android:icon="@drawable/money"
            android:title="@string/payroll" />
        <item
            android:id="@+id/requests"
            android:icon="@drawable/request"
            android:title="@string/requests" />
        <item
            android:id="@+id/myAccount"
            android:icon="@drawable/user_icon"
            android:title="@string/myAccount" />
        <item
            android:id="@+id/message"
            android:icon="@drawable/chat"
            android:title="@string/messages" />
    </group>



</menu>
