<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:text="@string/permission_type"
        android:layout_height="wrap_content" />
    <Spinner
        android:layout_width="match_parent"
        android:id="@+id/perTypeSp"
        android:layout_height="wrap_content">
    </Spinner>
    <TextView
        android:layout_width="match_parent"
        android:text="@string/permission_Date"
        android:layout_height="wrap_content" />
    <EditText
        android:layout_width="match_parent"
        android:id="@+id/perDate"
        android:layout_height="wrap_content">
    </EditText>
    <TextView
        android:layout_width="match_parent"
        android:text="@string/period"
        android:layout_height="wrap_content" />
    <Button
        android:layout_width="wrap_content"
        android:text="@string/send_request"
        android:textAllCaps="false"
        android:id="@+id/sendBtn"
        android:layout_height="wrap_content" />
</LinearLayout>