<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorPrimarblue"
    android:layout_height="match_parent">


<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_gravity="center"
    android:layout_height="wrap_content"  >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".Employee.ForgetPassword">
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:visibility="gone"
        android:layout_gravity="center"
        android:id="@+id/progress"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/org_code"
        android:padding="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/corner"
        android:hint="@string/org_code"/>
<EditText
    android:layout_width="match_parent"
    android:hint="@string/user_name"
    android:padding="10dp"
    android:layout_marginBottom="10dp"
    android:background="@drawable/corner"
     android:id="@+id/nameEd"
    android:layout_height="wrap_content" />
    <EditText
        android:layout_width="match_parent"
        android:hint="@string/email"
        android:id="@+id/emailEd"
        android:padding="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/corner"
        android:layout_height="wrap_content" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/phoneEd"
        android:padding="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/corner"
        android:hint="@string/phone"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/empCodeEd"
        android:padding="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/corner"
        android:hint="@string/emp_code"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/empFingerprintEd"
        android:padding="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/corner"
        android:hint="@string/fingerprint"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sendBtn"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:background="@drawable/buttonshape"
        android:text="@string/send_request"/>
</LinearLayout>
</ScrollView>
</LinearLayout>
