<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundblue"

    >


<LinearLayout android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:padding="10dp"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:gravity="bottom"
        app:hintTextAppearance="@style/MyAppearance">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:id="@+id/title"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="7dp"
            android:paddingBottom="7dp"
            android:background="@drawable/corner"
            />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="10dp"
        android:gravity="bottom"

        app:hintTextAppearance="@style/MyAppearance"
        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:id="@+id/desc"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="7dp"
            android:paddingBottom="7dp"
            android:background="@drawable/corner"/>
    </android.support.design.widget.TextInputLayout>
    <TextView
        android:layout_width="match_parent"
        android:text="@string/employees"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/corner"
        android:layout_height="wrap_content"
        android:id="@+id/employess"/>
    <RadioGroup
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radioDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date_reminder"
            android:textColor="@color/white"
            android:fontFamily="@font/cairo"
            android:textStyle="bold"
            android:textSize="18sp"/>

        <RadioButton
            android:id="@+id/radioTime"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/time_reminder"
            android:textSize="18sp"/>
    </RadioGroup>
    <TextView
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"

        android:background="@drawable/corner"
        android:text="@string/date"
        android:visibility="gone"
        android:padding="10dp"
        />

        <TextView
            android:id="@+id/time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/time"
            android:visibility="gone"

            android:background="@drawable/corner"
            />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="                                                           16dp"
        android:visibility="gone"
android:id="@+id/repeatLayout"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/repeat"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cairo"
            android:text="@string/repeat"
            android:textColor="@color/white"
            android:textSize="@dimen/middle_font_size" />

    </LinearLayout>

    <ProgressBar
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:id="@+id/progress"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        android:background="@drawable/corner"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/buttonshape"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp" />
</LinearLayout>
</ScrollView>