<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    android:background="@color/colorPrimarblue"
    tools:context=".Employee.Login">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:paddingBottom="16dp"
        android:src="@mipmap/ic_launcher"
        />
    <ProgressBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:visibility="gone"

        android:id="@+id/progress"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/org_code"
        android:background="@drawable/corner"
        android:layout_marginBottom="10dp"
        android:padding="16dp"
        android:textStyle="bold"
        android:textSize="@dimen/default_font_size"
        android:fontFamily="@font/cairo"
        android:drawableStart="@drawable/group"
        android:id="@+id/org_code"/>

        <EditText
            android:textSize="@dimen/default_font_size"
            android:textStyle="bold"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_name"
            android:fontFamily="@font/cairo"
            android:padding="16dp"
            android:drawableStart="@drawable/user_icon"
            android:background="@drawable/corner"
            android:id="@+id/user_name"/>



    <EditText
        android:drawableStart="@drawable/pass1"
        android:layout_width="match_parent"
        android:background="@drawable/corner"
android:inputType="textPassword"
        android:fontFamily="@font/cairo"
        android:textStyle="bold"

        android:layout_marginTop="10dp"
android:padding="16dp"
        android:textSize="@dimen/default_font_size"

        android:hint="@string/password"
        android:layout_height="wrap_content"
        android:id="@+id/password"/>



    <Button
        android:layout_width="match_parent"
        android:id="@+id/login"
        android:layout_marginTop="10dp"
        android:background="@drawable/buttonshape"
        android:text="@string/login"
        android:textColor="@color/white"
android:textSize="20sp"
        android:textStyle="bold"

        android:fontFamily="@font/cairo"

        android:textAllCaps="false"
        android:layout_gravity="center"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/forget_pass"
        android:text="@string/forget_pass"
        android:textAllCaps="false"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/cairo"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:textSize="@dimen/default_font_size"

        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/create_account"
        android:text="@string/create_acc"
        android:textAllCaps="false"
        android:textSize="@dimen/default_font_size"

        android:layout_marginTop="10dp"
           android:fontFamily="@font/cairo"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:layout_height="wrap_content" />

</LinearLayout>